--- a/styles/main.css
+++ b/styles/main.css
@@ -135,14 +135,12 @@ header {
     max-width: 320px;
     margin: 0 auto;
 }
-.banner {
-    margin-bottom: 100px;
-}
 .banner-box {
     background-image: url(../images/banner.jpg);
     background-position: center center;
     background-size: cover;
     padding: 100px;
+    margin-bottom: 100px;
 }
 .banner-title {
     color: #fff;
@@ -163,6 +161,7 @@ header {
     text-align: center;
     display: block;
     width: 95px;
+    text-transform: uppercase;
 }
 .banner-text {
     font-family: 'Open Sans', sans-serif;
@@ -180,6 +179,177 @@ header {
     line-height: 18px;
     background: #FBB731;
     border-radius: 5px;
-    padding: 10px 20px;
+    padding: 20px 30px;
+    text-transform: uppercase;
+}
+.menu {
+    margin-bottom: 100px;
+}
+.menu-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.menu-title {
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #1B2A49;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.menu-select {
+    border: 1px solid #DEDEDE;
+    border-radius: 22px;
+    padding: 13px 30px;
+    color: #443737;
+    font-size: 15px;
+    appearance: none;
+    flex-basis: 279px;
+    background-image: url(../images/arrow.svg);
+    background-size: 12.79px 7.75px;
+    background-repeat: no-repeat;
+    background-position: 89% center;
+}
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px 20px;
+    margin-bottom: 100px;
+    margin-top: 34px;
+}
+.menu-grid-cover {
+    width: 100%;
+    height: 438px;
+    position: relative;
+    overflow: hidden;
+}
+.menu-grid-cover img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100%;
+    height: 438px;
+}
+.menu-grid-title {
+    color: #1B2A49;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 38px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 8px;
+}
+.menu-grid-price {
+    color: #979797;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.menu-grid-btn {
+    background: #FBB731;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 9px;
+}
+.menu-grid-icon {
+    background-image: url(../images/menu-cart.svg);
+    background-repeat: no-repeat;
+    display: block;
+    width: 18px;
+    height: 18px;
+}
+.menu-grid-text {
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 18px;
+    text-transform: uppercase;
+}
+.additionally {
+    margin-bottom: 140px;
+}
+.additionally-header {
+    font-size: 44px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #1B2A49;
+    line-height: 56px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.additionally-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 34px;
+}
+.additionally-grid-cover {
+    width: 100%;
+    height: 438px;
+    position: relative;
+    overflow: hidden;
+}
+.additionally-grid-cover img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100%;
+    height: 438px;
+}
+.additionally-grid-title {
+    color: #1B2A49;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 38px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 8px;
+}
+.additionally-grid-price {
+    color: #979797;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.additionally-grid-btn {
+    background: #FBB731;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    gap: 9px;
+}
+.additionally-grid-icon {
+    background-image: url(../images/menu-cart.svg);
+    background-repeat: no-repeat;
+    display: block;
+    width: 18px;
+    height: 18px;
+}
+.additionally-grid-text {
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 18px;
     text-transform: uppercase;
 }
