--- a/styles/main.css
+++ b/styles/main.css
@@ -146,7 +146,7 @@ header {
     background-position: center center;
     background-size: cover;
     padding: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 .banner-title {
     color: #fff;
@@ -188,12 +188,14 @@ header {
     padding: 18px 28px;
     text-transform: uppercase;
     border: 1px solid #FBB731;
+    transition: 0.2s;
 }
 .banner-link:hover {
     background-color: transparent;
     color: #FBB731;
 }
 .menu {
+    padding-top: 20px;
     margin-bottom: 100px;
 }
 .menu-header {
@@ -436,6 +438,31 @@ header {
     padding-left: 0;
     list-style-type: none;
 }
+.button-up {
+    background-color: #FBB731;
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 5px 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 1s;
+}
+.button-up:hover {
+    background-color: #F37335;
+}
+.button-up.hidden {
+    opacity: 0;
+}
+.button-up.visible {
+    opacity: 1;
+}
+
 
 /* Style Index */
 
