--- a/styles/main.css
+++ b/styles/main.css
@@ -99,7 +99,7 @@ header {
     margin-bottom: 140px;
 }
 .breadcrumbs {
-    padding-left: o;
+    padding-left: 0;
     margin-top: 0;
     list-style-type: none;
     display: flex;
@@ -138,23 +138,26 @@ header {
     font-size: 15px;
     line-height: 1.5;
     color: #FAF9F9;
-    max-width: 320px;
+    max-width: 340px;
     margin: 0 auto;
 }
 .banner-box {
     background-image: url(../images/banner.jpg);
     background-position: center center;
+    background-repeat: no-repeat;
     background-size: cover;
     padding: 100px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
+   
 }
 .banner-title {
     color: #fff;
     font-size: 60px;
     font-weight: 900;
     line-height: 76px;
-    margin-bottom: 35px;
     margin-top: 0;
+    margin-bottom: 6px;
+   
 }
 .banner-title span {
     font-family: 'Open Sans', sans-serif;
@@ -166,8 +169,10 @@ header {
     padding: 5px;
     text-align: center;
     display: block;
-    width: 95px;
+    width: 96px;
     text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 9px;
 }
 .banner-text {
     font-family: 'Open Sans', sans-serif;
@@ -175,6 +180,7 @@ header {
     line-height: 24px;
     color: #fff;
     width: 312px;
+    margin-top: 0;
     margin-bottom: 35px;
 }
 .banner-link {
@@ -185,10 +191,11 @@ header {
     line-height: 18px;
     background: #FBB731;
     border-radius: 5px;
-    padding: 18px 28px;
+    padding: 18px 25px;
     text-transform: uppercase;
     border: 1px solid #FBB731;
     transition: 0.2s;
+    margin-bottom: 100px;
 }
 .banner-link:hover {
     background-color: transparent;
