--- a/styles/main.css
+++ b/styles/main.css
@@ -143,10 +143,10 @@ header {
 }
 .banner-box {
     background-image: url(../images/banner.jpg);
-    background-position: center center;
+    background-position: 0 center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 100px;
+    padding: 100px 99px 106px;
     margin-bottom: 100px;
    
 }
@@ -202,7 +202,6 @@ header {
     color: #FBB731;
 }
 .menu {
-    padding-top: 20px;
     margin-bottom: 100px;
 }
 .menu-header {
@@ -596,4 +595,65 @@ header {
     font-weight: 700;
     margin-bottom: 10px;
     margin-top: 0;
+}
+
+/* Responsive */
+
+@media (min-width: 1001px) {
+    .footer-list + .footer-list-tel {
+        display: none;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        max-width: 738px;
+    }
+    .header-logo {
+        width: 150px;
+        height: 48px;
+        background-size: contain;
+    }
+    .header-nav {
+        gap: 22px;
+    }
+    .header-item {
+        flex-basis: 75.5%;
+    }
+    .bg {
+        margin-bottom: 72px;
+    }
+    .banner-box {
+        background-position: -80px center;
+        padding: 100px 40px 120px;
+        margin-bottom: 80px;
+    }
+    .menu {
+        margin-bottom: 89px;
+    }
+    .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px 15px;
+    }
+    .additionally .container {
+        overflow: hidden;
+    }
+    .additionally-grid {
+        display: flex;
+        width: auto;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        gap: 50px 15px;
+        padding-bottom: 50px;
+    }
+    .additionally-grid-cover {
+        width: 275px;
+        height: 320px;
+    }
+    .footer-tel {
+        display: none;
+    }
+    .footer-list + .footer-list-tel {
+        display: block;
+    }
 }
