--- a/styles/main.css
+++ b/styles/main.css
@@ -597,10 +597,67 @@ header {
     margin-top: 0;
 }
 
+
+
+/* Modal */
+
+.burger {
+    width: 34px;
+    height: 22px;
+    background-color: transparent;
+    background-image: url(../images/burger-button.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: none;
+    cursor: pointer;
+}
+
+#modal {
+    max-width: 500px;
+    background-color: cornsilk;
+    text-align: center;
+    position: absolute;
+    top: -400px;
+    left: 0;
+    right: 0;
+    margin: 20px auto 0;
+    transition: 0.5s;
+    padding: 40px 30px;
+    box-sizing: border-box;
+}
+
+#modal .header-nav {
+    flex-direction: column;
+    max-width: 300px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.burger-close {
+    width: 22px;
+    height: 22px;
+    background-color: transparent;
+    background-image: url(../images/close.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+
 /* Responsive */
 
 @media (min-width: 1001px) {
     .footer-list + .footer-list-tel {
+        display: none;
+    }
+}
+
+@media (min-width: 766px) {
+    .header-burger {
         display: none;
     }
 }
@@ -655,5 +712,47 @@ header {
     }
     .footer-list + .footer-list-tel {
         display: block;
+    }
+}
+
+@media (max-width: 765px) {
+    nav {
+        display: none;
+    }
+    .header {
+        gap: 21px;
+    }
+}
+
+@media (max-width: 567px) {
+    .breadcrumbs a {
+        font-size: 14px;
+    }
+    .title {
+        font-size: 38pxpx;
+    }
+    .description {
+        font-size: 12px;
+    }
+    .bg {
+        padding: 55px 0;
+    }
+    .banner-box {
+        background-position: 17% center;
+        padding: 35px 24px 54px;
+    }
+}
+
+@media (max-width: 360px) {
+    .header-logo {
+        width: 116px;
+        height: 37px;
+        background-size: contain;
+    }
+}
+
+@media (max-width: 320px) {
+    .banner-box {
+        background-position: 25% center;
     }
 }
