--- a/styles/main.css
+++ b/styles/main.css
@@ -728,12 +728,49 @@ header {
     }
 }
 
+@media (max-width: 655px) {
+    .additionally {
+        margin-bottom: 89px;
+    }
+    .footer {
+        padding-top: 61px;
+        padding-bottom: 61px;
+    }
+    .footer-box {
+        display: grid;
+        grid-template-areas: 'a d'
+                             'b c';
+        gap: 21px;
+    }
+    .item-a {
+        grid-area: a;
+    }
+    .item-b {
+        grid-area: b;
+    }
+    .item-c {
+        grid-area: c;
+    }
+    .item-d {
+        grid-area: d;
+    }
+    .item-b .footer-list-tel {
+        display: none;
+    }
+    .footer-tel {
+        display: block;
+    }
+    .footer-item h2 {
+        font-size: 18px;
+    }
+}
+
 @media (max-width: 567px) {
     .breadcrumbs a {
         font-size: 14px;
     }
     .title {
-        font-size: 38pxpx;
+        font-size: 38px;
     }
     .description {
         font-size: 12px;
@@ -745,18 +782,242 @@ header {
         background-position: 17% center;
         padding: 35px 24px 54px;
     }
+    .menu-grid-cover {
+        height: 352px;
+    }
+    .menu-grid-cover img {
+        width: 100%;
+        height: 352px;
+    }
+    .menu-grid-title {
+        font-size: 26px;
+    }
+    .additionally-grid-cover {
+        width: 240px;
+    }
+    .additionally-grid-title {
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 550px) {
+    .menu-title {
+        font-size: 36px;
+    }
+    .menu-select {
+        flex-basis: 222px;
+    }
+    .menu-grid-title {
+        font-size: 24px;
+    } 
+    .additionally-header {
+        font-size: 36px;
+    }
+    .additionally-grid-title {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 520px) {
+    .footer-box {
+        display: grid;
+        grid-template-areas: 'a d'
+                             'b b'
+                             'c c';
+        gap: 21px;
+    }
+}
+
+@media (max-width: 466px) {
+    .menu-title {
+        font-size: 30px;
+    }
+    .menu-select {
+        flex-basis: 188px;
+    }
+    .menu-grid-cover {
+        height: 300px;
+    }
+    .menu-grid-title {
+        font-size: 20px;
+    }
+    .additionally-header {
+        font-size: 30px;
+    }
+    .additionally-grid-title {
+        font-size: 20px;
+    }
+    .additionally-grid-cover {
+        width: 200px;
+        height: 300px;
+    }
+}
+
+@media (max-width: 400px) {
+    .menu-grid-title {
+        font-size: 18px;
+    }
+    .menu-grid-cover {
+        height: 270px;
+    }
+    .menu-grid-cover img {
+        width: 100%;
+        height: 270px;
+    }
+    .additionally-grid-title {
+        font-size: 18px;
+    }
+    .additionally-grid-cover {
+        width: 194px;
+        height: 270px;
+    }
+    .additionally-grid-cover img {
+        height: 270px;
+    }
+}
+
+@media (max-width: 380px) {
+    .banner-text {
+        width: 261px;
+    }
+    .menu-select {
+        flex-basis: 150px;
+        padding: 9px 17px;
+    }
+}
+
+@media (max-width: 365px) {
+    .menu-title {
+        font-size: 27px;
+    }
+    .menu-grid-title {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 360px) {
+    .container {
+        max-width: 290px;
+    }
     .header-logo {
         width: 116px;
         height: 37px;
         background-size: contain;
     }
+    .menu-header {
+        gap: 20px;
+    }
 }
 
 @media (max-width: 320px) {
+
+    .bg {
+        margin-bottom: 33px;
+    }
     .banner-box {
         background-position: 25% center;
+        padding: 35px 24px 54px 22px;
+        margin-bottom: 50px;
+    }
+    .banner-text {
+        width: 244px;
+    }
+    .menu {
+        margin-bottom: 50px;
+    }
+    .menu-header {
+        gap: 27px;
+    }
+    .menu-title {
+        font-size: 27px;
+    }
+    .menu-select {
+        padding: 8px 15px;
+        font-size: 12px;
+    }
+    .menu-grid {
+        margin-top: 31px;
+        margin-bottom: 50px;
+        gap: 24px 12px;
+    }
+    .menu-grid-cover {
+        height: 180px;
+    }
+    .menu-grid-cover img {
+        width: 100%;
+        height: 180px;
+    }
+    .menu-grid-title {
+        font-size: 13px;
+        font-weight: 700;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .menu-grid-price {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    .menu-grid-btn {
+        padding: 10px 20px;
+    }
+    .additionally {
+        margin-bottom: 61px;
+    }
+    .additionally-header {
+        font-size: 27px;
+        font-weight: 700;
+    }
+    .additionally-grid {
+        padding-bottom: 34px;
+        gap: 6px;
+    }
+    .additionally-grid-cover {
+        width: 139px;
+        height: 180px;
+    }
+    .additionally-grid-title {
+        font-size: 13px;
+        font-weight: 700;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .additionally-grid-price {
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    .additionally-grid-btn {
+        padding: 10px 20px;
+    }
+    .footer {
+        padding-top: 61px;
+        padding-bottom: 61px;
+    }
+    .footer-box {
+        display: grid;
+        grid-template-areas: 'a d'
+                             'b b'
+                             'c c';
+        gap: 21px;
+    }
+    .item-a {
+        grid-area: a;
+    }
+    .item-b {
+        grid-area: b;
+    }
+    .item-c {
+        grid-area: c;
+    }
+    .item-d {
+        grid-area: d;
+    }
+    .item-b .footer-list-tel {
+        display: none;
+    }
+    .footer-tel {
+        display: block;
+    }
+    .footer-item h2 {
+        font-size: 18px;
     }
 }
