--- a/styles/main.css
+++ b/styles/main.css
@@ -405,14 +405,20 @@ header {
     margin-top: 0;
     margin-bottom: 19px;
 }
+.footer-list {
+    padding-left: 0;
+    list-style-type: none;
+}
+
 .footer-list li {
     color: #DEDEDE;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 800;
     line-height: 24px;
     margin-bottom: 5px;
 }
+
 .footer-list a {
     color: #DEDEDE;
     text-decoration: none;
@@ -426,15 +432,11 @@ header {
     margin-bottom: 2px;
     font-weight: 400;
 }
-.footer-list li {
-    font-weight: 700;
-}
+
 .footer-list-tel {
     margin-top: 0;
 }
-.footer-list-tel li {
-    margin-bottom: 5px;
-}
+
 .footer-list-tel a {
     font-size: 20px;
     font-weight: 800;
@@ -444,10 +446,7 @@ header {
 .footer-list-tel a:hover {
     color: #DEDEDE;
 }
-.footer-list {
-    padding-left: 0;
-    list-style-type: none;
-}
+
 .button-up {
     background-color: #FBB731;
     color: #1E2F40;
@@ -699,7 +698,7 @@ header {
     .additionally .container {
         overflow: hidden;
     }
-    .additionally-grid {
+    .menu-grid .additionally-grid {
         display: flex;
         width: auto;
         overflow-x: scroll;
@@ -739,7 +738,8 @@ header {
     .footer-box {
         display: grid;
         grid-template-areas: 'a d'
-                             'b c';
+                             'b b'
+                             'c c';
         gap: 21px;
     }
     .item-a {
@@ -759,6 +759,9 @@ header {
     }
     .footer-tel {
         display: block;
+    }
+    .footer-list-tel a {
+        line-height: 25px;
     }
     .footer-item h2 {
         font-size: 18px;
@@ -783,11 +786,10 @@ header {
         padding: 35px 24px 54px;
     }
     .menu-grid-cover {
-        height: 352px;
+        height: 50vw;
     }
     .menu-grid-cover img {
-        width: 100%;
-        height: 352px;
+        height: 50vw;
     }
     .menu-grid-title {
         font-size: 26px;
@@ -815,16 +817,6 @@ header {
     }
     .additionally-grid-title {
         font-size: 24px;
-    }
-}
-
-@media (max-width: 520px) {
-    .footer-box {
-        display: grid;
-        grid-template-areas: 'a d'
-                             'b b'
-                             'c c';
-        gap: 21px;
     }
 }
 
