--- a/styles/main.css
+++ b/styles/main.css
@@ -239,6 +239,7 @@ header {
     gap: 50px 20px;
     margin-bottom: 100px;
     margin-top: 34px;
+    overflow: hidden;
 }
 .menu-grid-cover {
     width: 100%;
@@ -260,7 +261,7 @@ header {
     color: #1B2A49;
     font-size: 30px;
     font-weight: 600;
-    line-height: 38px;
+    line-height: 130%;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 8px;
@@ -320,6 +321,7 @@ header {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 34px;
+    overflow: hidden;
 }
 .additionally-grid-cover {
     width: 100%;
@@ -659,12 +661,6 @@ header {
     }
 }
 
-@media (min-width: 766px) {
-    .header-burger {
-        display: none;
-    }
-}
-
 @media (max-width: 1000px) {
     .container {
         max-width: 738px;
@@ -703,18 +699,24 @@ header {
         width: auto;
         overflow-x: scroll;
         overflow-y: hidden;
-        gap: 50px 15px;
+        gap: 45px 15px;
         padding-bottom: 50px;
     }
-    .additionally-grid-cover {
-        width: 275px;
-        height: 320px;
+    .additionally-grid-cover, .additionally-grid-cover img {
+        width: 31vw;
+        height: 48vw;
     }
     .footer-tel {
         display: none;
     }
     .footer-list + .footer-list-tel {
         display: block;
+    }
+}
+
+@media (min-width: 766px) {
+    .header-burger {
+        display: none;
     }
 }
 
@@ -725,11 +727,26 @@ header {
     .header {
         gap: 21px;
     }
+    
+    .additionally-grid-title {
+        font-size: 26px;
+    }
+
 }
 
 @media (max-width: 655px) {
+    .menu-grid {
+        gap: 30px 15px;
+    }
+    .menu-grid-cover, .menu-grid-cover img  {
+        height: 54vw;
+    }
     .additionally {
         margin-bottom: 89px;
+    }
+    
+    .additionally-grid-title, .menu-grid-title {
+        font-size: 20px;
     }
     .footer {
         padding-top: 61px;
@@ -785,19 +802,7 @@ header {
         background-position: 17% center;
         padding: 35px 24px 54px;
     }
-    .menu-grid-cover {
-        height: 50vw;
-    }
-    .menu-grid-cover img {
-        height: 50vw;
-    }
     .menu-grid-title {
-        font-size: 26px;
-    }
-    .additionally-grid-cover {
-        width: 240px;
-    }
-    .additionally-grid-title {
         font-size: 26px;
     }
 }
@@ -816,7 +821,7 @@ header {
         font-size: 36px;
     }
     .additionally-grid-title {
-        font-size: 24px;
+        font-size: 20px;
     }
 }
 
@@ -827,63 +832,14 @@ header {
     .menu-select {
         flex-basis: 188px;
     }
-    .menu-grid-cover {
-        height: 300px;
-    }
     .menu-grid-title {
         font-size: 20px;
     }
     .additionally-header {
         font-size: 30px;
     }
-    .additionally-grid-title {
-        font-size: 20px;
-    }
     .additionally-grid-cover {
-        width: 200px;
-        height: 300px;
-    }
-}
-
-@media (max-width: 400px) {
-    .menu-grid-title {
-        font-size: 18px;
-    }
-    .menu-grid-cover {
-        height: 270px;
-    }
-    .menu-grid-cover img {
-        width: 100%;
-        height: 270px;
-    }
-    .additionally-grid-title {
-        font-size: 18px;
-    }
-    .additionally-grid-cover {
-        width: 194px;
-        height: 270px;
-    }
-    .additionally-grid-cover img {
-        height: 270px;
-    }
-}
-
-@media (max-width: 380px) {
-    .banner-text {
-        width: 261px;
-    }
-    .menu-select {
-        flex-basis: 150px;
-        padding: 9px 17px;
-    }
-}
-
-@media (max-width: 365px) {
-    .menu-title {
-        font-size: 27px;
-    }
-    .menu-grid-title {
-        font-size: 16px;
+        height: 50vw;
     }
 }
 
@@ -898,118 +854,5 @@ header {
     }
     .menu-header {
         gap: 20px;
-    }
-}
-
-@media (max-width: 320px) {
-
-    .bg {
-        margin-bottom: 33px;
-    }
-    .banner-box {
-        background-position: 25% center;
-        padding: 35px 24px 54px 22px;
-        margin-bottom: 50px;
-    }
-    .banner-text {
-        width: 244px;
-    }
-    .menu {
-        margin-bottom: 50px;
-    }
-    .menu-header {
-        gap: 27px;
-    }
-    .menu-title {
-        font-size: 27px;
-    }
-    .menu-select {
-        padding: 8px 15px;
-        font-size: 12px;
-    }
-    .menu-grid {
-        margin-top: 31px;
-        margin-bottom: 50px;
-        gap: 24px 12px;
-    }
-    .menu-grid-cover {
-        height: 180px;
-    }
-    .menu-grid-cover img {
-        width: 100%;
-        height: 180px;
-    }
-    .menu-grid-title {
-        font-size: 13px;
-        font-weight: 700;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-    .menu-grid-price {
-        font-size: 16px;
-        margin-bottom: 10px;
-    }
-    .menu-grid-btn {
-        padding: 10px 20px;
-    }
-    .additionally {
-        margin-bottom: 61px;
-    }
-    .additionally-header {
-        font-size: 27px;
-        font-weight: 700;
-    }
-    .additionally-grid {
-        padding-bottom: 34px;
-        gap: 6px;
-    }
-    .additionally-grid-cover {
-        width: 139px;
-        height: 180px;
-    }
-    .additionally-grid-title {
-        font-size: 13px;
-        font-weight: 700;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-    .additionally-grid-price {
-        font-size: 16px;
-        margin-bottom: 10px;
-    }
-    .additionally-grid-btn {
-        padding: 10px 20px;
-    }
-    .footer {
-        padding-top: 61px;
-        padding-bottom: 61px;
-    }
-    .footer-box {
-        display: grid;
-        grid-template-areas: 'a d'
-                             'b b'
-                             'c c';
-        gap: 21px;
-    }
-    .item-a {
-        grid-area: a;
-    }
-    .item-b {
-        grid-area: b;
-    }
-    .item-c {
-        grid-area: c;
-    }
-    .item-d {
-        grid-area: d;
-    }
-    .item-b .footer-list-tel {
-        display: none;
-    }
-    .footer-tel {
-        display: block;
-    }
-    .footer-item h2 {
-        font-size: 18px;
     }
 }
