--- a/styles/main.css
+++ b/styles/main.css
@@ -148,7 +148,6 @@ header {
     background-size: cover;
     padding: 100px 99px 106px;
     margin-bottom: 100px;
-   
 }
 .banner-title {
     color: #fff;
@@ -156,8 +155,7 @@ header {
     font-weight: 900;
     line-height: 76px;
     margin-top: 0;
-    margin-bottom: 15px;
-   
+    margin-bottom: 15px; 
 }
 .banner-title span {
     font-family: 'Open Sans', sans-serif;
@@ -239,7 +237,6 @@ header {
     gap: 50px 20px;
     margin-bottom: 100px;
     margin-top: 34px;
-    overflow: hidden;
 }
 .menu-grid-cover {
     width: 100%;
@@ -321,6 +318,8 @@ header {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 34px;
+    overflow-x: scroll;
+    overflow-y: hidden;
     overflow: hidden;
 }
 .additionally-grid-cover {
