--- a/styles/main.css
+++ b/styles/main.css
@@ -491,17 +491,20 @@ header {
     padding-bottom: 170px;
 }
 .content-title {
-    font-size: 120px;
+    /*font-size: 120px;*/
     font-weight: 800;
+    font-size: calc(45px + 75 * ((100vw - 320px) / (1920 - 320)));
     text-transform: uppercase;
-    line-height: 120px;
+    /*line-height: 120px;*/
+    line-height: calc(55px + 65 * ((100vw - 320px) / (1920 - 320)));
     margin-bottom: 40px;
     margin-top: 0;
     margin-bottom: 0;
 }
 .content-title span {
     color: #FBB731;
-    font-size: 30px;
+    /*font-size: 30px;*/
+    font-size: calc(23px + 7 * ((100vw - 320px) / (1920 - 320)));
     font-weight: 700;
     line-height: 38px;
     display: block;
@@ -509,7 +512,8 @@ header {
 }
 .content-text {
     font-family: 'Open sans', sans-serif;
-    font-size: 19px;
+    /*font-size: 19px;*/
+    font-size: calc(16px + 3 * ((100vw - 320px) / (1920 - 320)));
     line-height: 1.4;
     margin-bottom: 42px;
 }
@@ -542,15 +546,19 @@ header {
     position: relative;
 }
 .visual-bg {
-    width: 432px;
+    /*width: 432px;*/
+    width: calc(180px + 252 * ((100vw - 765px)/(1920-765)));
     height: 100%;
     background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
 }
 .main img {
-    max-width: 652px;
+    /*width: 652px;*/
+    width: calc(353px + 299 * ((100vw - 765px)/(1920-765)));
     position: absolute;
-    right: -101px;
-    bottom: 29px;
+    /*right: -101px;*/
+    right: calc(-13px - 88 * ((100vw - 765px)/(1920-765)));
+    /*bottom: 29px;*/
+    bottom: calc(76 - 47 * ((100vw - 765px)/(1920-765)));
 }
 .promo {
     padding-top: 186px;
@@ -664,61 +672,13 @@ header {
 
 /* Responsive */
 
-@media (max-width: 1400px) {
-    .content {
-        padding-top: ;
-    }
-    .main img {
-        width: 40vw;
-        right: -43px;
-        bottom: 100px;
-    }
-    .visual {
-    padding-right: ;
-    }
-    
-}
 
 @media (max-width: 1300px) {
-    .wrapper {
-        max-width: 970px;
-    }
     .content {
-        padding-left: ;
-    }
-    .content-title {
-        font-size: 100px;
-    }
-    .conten-text {
-        font-size: ;
-    }
-    .main img {
-        width: ;
-        right: ;
-        bottom: ;
-    }
-    .visual {
-        padding-right: ;
+        flex: 0 0 480px;
     }
 }
 @media (max-width: 1150px) {
-    .content-title {
-        font-size: 80px;
-    }
-    .conten-text {
-        font-size: 14px;
-    }
-    .content {
-        
-    }
-    .main img {
-        width: ;
-        right: ;
-        bottom: ;
-    }
-    .visual-bg {
-        width: 345px;
-    }
     .visual {
         padding-right: 40px;
     }
@@ -730,17 +690,6 @@ header {
 }
 
 @media (max-width: 1000px) {
-    .content-title {
-        font-size: 86px;
-    }
-    .conten-text {
-        font-size: 14px;
-    }
-    .main img {
-        width: ;
-        right: ;
-        bottom: ;
-    }
     .wrapper {
         max-width: 759px;
     }
@@ -803,29 +752,8 @@ header {
 }
 
 @media (max-width: 765px) {
-    .wrapper {
-        flex-direction: column;
-    }
-    
-    .content {
-        max-width: 555px;
-        padding-top: 42px;
-    }
-    .content-title {
-        font-size: 65px;
-        line-height: 75px;
-    }
-    .conten-text {
-        font-size: ;
-    }
-
     .visual {
         display: none;
-    }
-    .main img {
-        width: px;
-        right: px;
-        bottom: px
     }
     nav {
         display: none;
@@ -837,7 +765,6 @@ header {
     .additionally-grid-title {
         font-size: 26px;
     }
-
 }
 
 @media (max-width: 655px) {
@@ -895,6 +822,12 @@ header {
 }
 
 @media (max-width: 567px) {
+    .wrapper {
+        flex-direction: column;
+    }
+    .promo-left {
+        margin-bottom: 20px;
+    }
     .breadcrumbs a {
         font-size: 14px;
     }
