--- a/styles/main.css
+++ b/styles/main.css
@@ -555,12 +555,12 @@ header {
 }
 .main img {
     /*width: 652px;*/
-    width: calc(315px + 367 * ((100vw - 765px)/(1210-765)));
+    width: calc(16px + 3 * ((100vw - 320px) / (1920 - 320)));
     position: absolute;
     /*right: -101px;*/
-    right: calc(39px - 126 * ((100vw - 765px)/(1210-765)));
+    right: calc(16px + 3 * ((100vw - 320px) / (1920 - 320)));
     /*bottom: 29px;*/
-    bottom: calc(128px - 47 * ((100vw - 765px)/(1210-765)));
+    bottom: calc(16px + 3 * ((100vw - 320px) / (1920 - 320)));
 }
 .promo {
     /*padding-top: 186px;*/
