--- a/styles/main.css
+++ b/styles/main.css
@@ -702,7 +702,7 @@ header {
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 980px) {
     .container {
         max-width: 738px;
     }
@@ -734,18 +734,23 @@ header {
     }
     .additionally {
         overflow: hidden;
+        height: 36rem;
+        margin-bottom: 100px;
     }
     .additionally .additionally-grid {
         display: flex;
         width: auto;
         overflow-x: scroll;
         overflow-y: hidden;
-        gap: 45px 15px;
+        padding-right: -15px;
+        margin-right: -15px;
         padding-bottom: 50px;
     }
-    .additionally-grid-cover, .additionally-grid-cover img {
-        width: 31vw;
-        height: 48vw;
+    .additionally-grid .additionally-grid-item {
+        flex: 0 0 230px;
+    }
+    .additionally .additionally-grid-cover, .additionally .additionally-grid-cover img {
+        height: 320px;
     }
     .footer-tel {
         display: none;
@@ -771,7 +776,6 @@ header {
     .header {
         gap: 21px;
     }
-    
     .additionally-grid-title {
         font-size: 26px;
     }
@@ -788,11 +792,7 @@ header {
         height: 54vw;
     }
     .additionally {
-        margin-bottom: 89px;
-    }
-    
-    .additionally-grid-title, .menu-grid-title {
-        font-size: 20px;
+        margin-bottom: 60px;
     }
     .footer {
         padding-top: 61px;
@@ -838,6 +838,9 @@ header {
     .promo-left {
         margin-bottom: 20px;
     }
+    .menu-grid-title, .additionally-grid-title {
+        font-size: 23px;
+    }
 }
 
 @media (max-width: 567px) {
@@ -857,8 +860,28 @@ header {
         background-position: 17% center;
         padding: 35px 24px 54px;
     }
+    .menu {
+        margin-bottom: 46px;
+    }
     .menu-grid-title {
         font-size: 26px;
+    }
+    .menu-grid {
+        gap: 35px 15px;
+    }
+    .additionally {
+        height: 31rem;
+        margin-bottom: 46px;
+    }
+    .additionally .additionally-grid {
+        gap: 0;
+    }
+    .additionally-grid .additionally-grid-item {
+        flex: 0 0 180px;
+        padding-right: 12px;
+    }
+    .additionally .additionally-grid-cover, .additionally .additionally-grid-cover img {
+        height: 220px;
     }
 }
 
@@ -876,7 +899,10 @@ header {
         font-size: 36px;
     }
     .additionally-grid-title {
-        font-size: 20px;
+        font-size: 18px;
+    }
+    .menu-grid-btn, .additionally-grid-btn {
+        padding: 10px 18px;
     }
 }
 
@@ -890,34 +916,80 @@ header {
     .menu-grid-title {
         font-size: 20px;
     }
+    .additionally {
+        height: 30rem;
+    }
     .additionally-header {
         font-size: 30px;
     }
+    .additionally .additionally-grid {
+        gap: 0;
+    }
+    .additionally .additionally-grid-item {
+        flex: 0 0 150px;
+        padding-right: 12px;
+    }
     .additionally-grid-cover {
-        height: 50vw;
+        height: 101vw;
+    }
+    .menu-grid-title {
+        font-size: 18px;
+    } 
+    .additionally-grid-title {
+        font-size: 16px;
     }
 }
 
 @media (max-width: 360px) {
-    .container {
-        max-width: 290px;
-    }
     .header-logo {
         width: 116px;
         height: 37px;
         background-size: contain;
     }
+    .bg {
+        margin-bottom: 50px;
+    }
+    .banner-box {
+        margin-bottom: 50px;
+    }
     .menu-header {
         gap: 20px;
     }
+    .menu-title, .additionally-header {
+        font-size: 26px;
+    }
+    .menu-grid {
+        margin-bottom: 50px;
+        margin-top: 24px;
+    }
     .menu-grid-title {
-        font-size: 17px;
+        font-size: 16px;
+        margin-top: 14px;
+    }
+    .additionally .additionally-grid-item {
+        flex: 0 0 130px;
+        padding-right: 12px;
+    }
+    .additionally-grid-title {
+        font-size: 16px;
+        margin-top: 10px;
+        margin-top: 0px;
+    }
+    .menu-select {
+        padding: 13px;
+    }
+    .additionally {
+        height: 28rem;
     }
     .additionally-grid {
         gap: 35px 10px;
+        margin-top: 24px;
     }
     .additionally-grid-cover, .additionally-grid-cover img {
         width: 140px;
         height: 180px;
+    }
+    .button-up {
+        display: none;
     }
 }
