--- a/styles/main.css
+++ b/styles/main.css
@@ -538,9 +538,6 @@ header {
     font-weight: 700;
     transition: 0.2s;
 }
-.promo a {
-    transition: 0.2s;
-}
 
 .content-link:hover {
     background-color: transparent;
@@ -712,7 +709,7 @@ header {
     }
 }
 
-@media (max-width: 980px) {
+@media (max-width: 1000px) {
     .container {
         max-width: 738px;
     }
@@ -796,6 +793,10 @@ header {
 }
 
 @media (max-width: 655px) {
+    .content-title {
+        width: 80%;
+    }
+   
     .menu {
         margin-bottom: 55px;
     }
@@ -974,7 +975,11 @@ header {
         margin-bottom: 50px;
     }
     .menu-header {
-        gap: 20px;
+        gap: 10px;
+    }
+    .menu-select {
+        flex-basis: 160px;
+        padding: 10px 8px;
     }
     .menu-title, .additionally-header {
         font-size: 26px;
@@ -995,9 +1000,6 @@ header {
         font-size: 16px;
         margin-top: 10px;
         margin-top: 0px;
-    }
-    .menu-select {
-        padding: 13px;
     }
     .additionally {
         height: 28rem;
